# StreamingPrototypeClient

./: .gitignore  README.md  build.gradle  settings.gradle
android/: AndroidManifest.xml  CMakeLists.txt  build.gradle
android/assets/shaders/: lightfield.frag  lightfield.vert  lightfield_new.frag  lightfield_new.vert  lightfield_single.frag
android/cpp/: decoder.c  decoder.h  jni_decoder.c
android/cpp/x86/libavutil/: ffversion.h
android/res/values/: strings.xml
android/src/com/covart/streaming_prototype/: AndroidLauncher.java  ImageDecoderH264.java
android/src/com/covart/streaming_prototype/Image/: ImageDecoderH264.java
android/src/com/covart/streaming_prototype_v16x16/: AndroidLauncher.java  ImageDecoderH264.java
core/src/StreamingFormat/: Message.java
core/src/com/covart/streaming_prototype/: Buffer.java  BufferPool.java  Component.java  ConfigManager.java  Connection.java  ConnectionListener.java  Display.java  DisplayAdapter.java  DisplayBase.java  DisplayLightField.java  DisplayLightFieldSingle.java  DisplaySource.java  IPSelectorUI.java  ImageDecoderBase.java  ImageDecoderLZ4.java  ImageDecoderSimple.java  ImageDecoderStaticFiles.java  MasterComponentAdapter.java  Network.java  NetworkAsyncSender.java  PackInteger.java  Profiler.java  Sensor.java  SensorDataListener.java  StreamingPrototype.java  StringPool.java  TextureManager.java  UIManager.java
core/src/com/covart/streaming_prototype_v16x16/: Buffer.java  BufferPool.java  Component.java  Network.java  (+20 more)
gradle/wrapper/: gradle-wrapper.properties
libgdx-cardboard-core/: build.gradle  pom.xml
(+57 files in other folders)
